fixing text/button overlap in the action alert (happens sometimes at small viewports)

--- a/fe-scaffold/app/scss/partials/_action-alert.scss
+++ b/fe-scaffold/app/scss/partials/_action-alert.scss
@@ -39,6 +39,7 @@
     display: block;
     margin: auto;
     padding: 21px;
+    padding-right: 65px; // blocks off space for the X button
     text-decoration: none;
     transition: $fx-duration background 0s;
     width: 100%;
